--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Henry Mbamalu</h4>
               <p><em>Innovative and deadline-driven Software engineer with 3+ years of coding experience, writing clean and scalable code.</em></p>
@@ -248,7 +248,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic</h4> <small>Intern</small>
+              <h4>Graphic Designer</h4> <small>Intern</small>
               <!-- <h5>2017 - 2018</h5> -->
               <p><em>Boards and Contacts LTD</em></p>
               <ul>
