--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
               magna aliqua.
             </p>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-9">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span></span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.devhenry-portfolio.netlify.app</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a target="_blank" href="https://devhenry-portfolio.netlify.app">https://devhenry-portfolio.netlify.app</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>mbamaluhenry8@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Work Status:</strong> <span>Open to work</span></li>
-                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li> -->
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span><a target="_blank" href="https://github.com/Manlikehenryy">https://github.com/Manlikehenryy</a></span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li> -->
                 </ul>
               </div>
@@ -154,7 +154,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">77%</i></span>
+              <span class="skill">JavaScript <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -187,6 +187,13 @@
 
             <div class="progress">
               <span class="skill">Laravel <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Git <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -319,6 +326,16 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
+            <div class="portfolio-wrap">
+              <img src="assets/img/dashboard.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/dashboard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a target="_blank" href="http://enterprise-app-dashboard.herokuapp.com/" title="view site"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
             <div class="portfolio-wrap">
               <img src="assets/img/junkhub.PNG" class="img-fluid" alt="">
@@ -328,8 +345,8 @@
               </div>
             </div>
           </div>
-
         </div>
+
 
       </div>
     </section><!-- End Portfolio Section -->
