--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span></span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a target="_blank" href="https://devhenry-portfolio.netlify.app">https://devhenry-portfolio.netlify.app</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span>mbamaluhenry8@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span><a href="mailto:mbamaluhenry8@gmail.com">mbamaluhenry8@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Work Status:</strong> <span>Open to work</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span><a target="_blank" href="https://github.com/Manlikehenryy">https://github.com/Manlikehenryy</a></span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li> -->
@@ -244,10 +244,13 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Fullstack Developer  </h4><small>Intern</small>
+              <h4>Fullstack Developer  </h4>
               <!-- <h5>2019 - Present</h5> -->
               <p><em>Royal Exchange General Insurance </em></p>
               <ul>
+                <li>Built different microservices and middleware with Laravel</li>
+                <li>Implemented API integrations</li>
+                <li>Improved and optimized existing code</li>
                 <li>Enhanced efficiency, quality data, scope, operability, and flexibility of applications.  </li>
                 <li>Write clean code, drive technical design, and take responsibility for technical delivery </li>
                 <li>Managed, optimized, and updated PHP databases as required. </li>
