--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span></span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a target="_blank" href="https://devhenry-portfolio.netlify.app">https://devhenry-portfolio.netlify.app</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span><a href="mailto:mbamaluhenry8@gmail.com">mbamaluhenry8@gmail.com</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span><a href="mailto:henrymbamalu1@gmail.com">henrymbamalu1@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Work Status:</strong> <span>Open to work</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span><a target="_blank" href="https://github.com/Manlikehenryy">https://github.com/Manlikehenryy</a></span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li> -->
@@ -555,7 +555,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>mbamaluhenry8@gmail.com</p>
+                <p>henrymbamalu1@gmail.com</p>
               </div>
 
               <!-- <div class="phone">
