--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-laravel">Laravel</li>
+              <li data-filter=".filter-laravel.filter-react">Laravel</li>
               <li data-filter=".filter-react">React</li>
               <li data-filter=".filter-javascript">Javascript</li>
             </ul>
