added new projects links

--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-laravel .filter-react">Laravel</li>
+              <li data-filter=".filter-laravel">Laravel</li>
+              <li data-filter=".filter-laravelvue">Vue & Laravel</li>
               <li data-filter=".filter-react">React</li>
               <li data-filter=".filter-javascript">Javascript</li>
             </ul>
@@ -308,6 +309,36 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
+            <div class="portfolio-wrap">
+              <img src="assets/img/ats-app.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/ats-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a target="_blank" href="https://atsjobtracker.netlify.app" title="view code"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
+              <div class="portfolio-wrap">
+                <img src="assets/img/weather-app.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/weather-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://weatherforecastui.netlify.app" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
+              <div class="portfolio-wrap">
+                <img src="assets/img/dashboard.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/dashboard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://intranet.royalexchangeinsurance.com/" title="view site"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
             <div class="portfolio-wrap">
@@ -329,15 +360,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
-            <div class="portfolio-wrap">
-              <img src="assets/img/dashboard.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/dashboard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="http://enterprise-app-dashboard.herokuapp.com/" title="view site"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
+        
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
             <div class="portfolio-wrap">
