--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hi, my name is Henry Mbamalu and i'm a Software Engineer who loves building web-based software.
+             My hobbies are watching movies and exercising during my free time. I also enjoy working with teams.</p>
         </div>
 
         <div class="row">
@@ -93,10 +94,10 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Fullstack &amp; Backend Developer.</h3>
-            <p class="fst-italic">
+            <!-- <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
-            </p>
+            </p> -->
             <div class="row">
               <div class="col-lg-9">
                 <ul>
@@ -132,7 +133,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row skills-content">
@@ -226,7 +227,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -244,19 +245,41 @@
 
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Fullstack Developer  </h4>
-              <!-- <h5>2019 - Present</h5> -->
+              <h4>Fullstack Engineer</h4>
+              <h5>June 2022 - Present</h5>
               <p><em>Royal Exchange General Insurance </em></p>
               <ul>
-                <li>Built different microservices and middleware with Laravel</li>
-                <li>Implemented API integrations</li>
-                <li>Improved and optimized existing code</li>
-                <li>Enhanced efficiency, quality data, scope, operability, and flexibility of applications.  </li>
-                <li>Write clean code, drive technical design, and take responsibility for technical delivery </li>
-                <li>Managed, optimized, and updated PHP databases as required. </li>
-                <li>Designing and building web applications using Laravel. </li>
+                <li>Resolved critical cron job malfunction by proficiently troubleshooting and crafting the necessary command, enabling seamless upload of customers' vehicle information to the Nigerian insurance industry database, resulting in a remarkable 30% decrease in customer complaints.</li>
+                <li>Engineered a comprehensive automation system for intricate SQL queries, slashing manual query writing time by a staggering 80%.</li>
+                <li>Spearheaded the creation of a cutting-edge wallet system, curbing payment gateway complications by a notable 50%.</li>
+                <li>Orchestrated the automation of vital business procedures, elevating the productivity of key stakeholders.</li>
+                <li>Utilized SSH to augment server capabilities, overcoming a HTTP 413 request entity too large error and maximizing request size limits.</li>
+                <li>Crafted an intuitive, all-encompassing landing page housing the company's processes, significantly enhancing staff usability and workflow efficiency.</li>
               </ul>
             </div>
+
+            <div class="resume-item">
+              <h4>Back End Developer</h4> <small>Internship</small>
+              <h5>October 2022 - December 2022</h5>
+              <p><em>HNG Internship</em></p>
+              <ul>
+                <li>Revamped code crafted by our skilled team members resulted in an astounding 20% reduction in runtime, showcasing an optimization that significantly enhances our system's efficiency.</li>
+                <li>Achieved top 300 among 11,000 contenders.</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Software Developer  </h4> <small>Internship</small>
+              <h5>February 2022 - June 2022</h5>
+              <p><em>Royal Exchange General Insurance </em></p>
+              <ul>
+                <li>Built a Landing page using HTML, CSS, JavaScript & jQuery.</li>
+                <li>Did a few PHP tasks.</li>
+                <li>Installed software for printer, scanner etc.</li>
+                <li>Installed Window operating system and Window server.</li>
+              </ul>
+            </div>
+
             <div class="resume-item">
               <h4>Graphic Designer</h4> <small>Intern</small>
               <!-- <h5>2017 - 2018</h5> -->
@@ -293,7 +316,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -379,7 +402,7 @@
 
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!-- <section id="facts" class="facts">
       <div class="container">
 
         <div class="section-title">
@@ -424,11 +447,12 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section> -->
+    <!-- End Facts Section -->
 
    
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="section-title">
@@ -470,10 +494,11 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section> -->
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -495,7 +520,7 @@
                 <h3>Saul Goodman</h3>
                 <h4>Ceo &amp; Founder</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -508,7 +533,7 @@
                 <h3>Sara Wilsson</h3>
                 <h4>Designer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -521,7 +546,7 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -534,7 +559,7 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -547,14 +572,15 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section> -->
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -562,7 +588,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row" data-aos="fade-in">
