--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>Back End Developer</h4> <small>Internship</small>
+              <h4>Back End Developer <small>Internship</small></h4> 
               <h5>October 2022 - December 2022</h5>
               <p><em>HNG Internship</em></p>
               <ul>
@@ -269,7 +269,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>Software Developer  </h4> <small>Internship</small>
+              <h4>Software Developer  <small>Internship</small>
               <h5>February 2022 - June 2022</h5>
               <p><em>Royal Exchange General Insurance </em></p>
               <ul>
@@ -281,7 +281,7 @@
             </div>
 
             <div class="resume-item">
-              <h4>Graphic Designer</h4> <small>Intern</small>
+              <h4>Graphic Designer <small>Intern</small></h4> 
               <!-- <h5>2017 - 2018</h5> -->
               <p><em>Boards and Contacts LTD</em></p>
               <ul>
