--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
             </div>
 
             <div class="resume-item">
-              <h4>Back End Developer <small>Internship</small></h4> 
+              <h4>Back End Developer </h4> 
               <h5>October 2022 - December 2022</h5>
-              <p><em>HNG Internship</em></p>
+              <p><em>HNG Internship</em> <small>Internship</small></p>
               <ul>
                 <li>Revamped code crafted by our skilled team members resulted in an astounding 20% reduction in runtime, showcasing an optimization that significantly enhances our system's efficiency.</li>
                 <li>Achieved top 300 among 11,000 contenders.</li>
@@ -269,9 +269,9 @@
             </div>
 
             <div class="resume-item">
-              <h4>Software Developer  <small>Internship</small>
+              <h4>Software Developer 
               <h5>February 2022 - June 2022</h5>
-              <p><em>Royal Exchange General Insurance </em></p>
+              <p><em>Royal Exchange General Insurance</em> <small>Internship</small></p>
               <ul>
                 <li>Built a Landing page using HTML, CSS, JavaScript & jQuery.</li>
                 <li>Did a few PHP tasks.</li>
@@ -281,9 +281,9 @@
             </div>
 
             <div class="resume-item">
-              <h4>Graphic Designer <small>Intern</small></h4> 
+              <h4>Graphic Designer</h4> 
               <!-- <h5>2017 - 2018</h5> -->
-              <p><em>Boards and Contacts LTD</em></p>
+              <p><em>Boards and Contacts LTD</em> <small>Internship</small></p>
               <ul>
                 <li>Worked with corel draw and other graphics design softwares.</li>
               </ul>
