--- a/index.html
+++ b/index.html
@@ -162,9 +162,51 @@
             </div>
 
             <div class="progress">
-              <span class="skill">React <i class="val">65%</i></span>
+              <span class="skill">React <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Node.js <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Vue <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Docker<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Kubernetes<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">ASP.Net Core <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">C# <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -182,35 +224,42 @@
             <div class="progress">
               <span class="skill">PHP <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Laravel <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Git <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Mysql <i class="val">85%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Mssql <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">MongoDB <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Mysql <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Mssql <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -220,6 +269,107 @@
 
       </div>
     </section><!-- End Skills Section -->
+
+      <!-- ======= Portfolio Section ======= -->
+      <section id="portfolio" class="portfolio section-bg">
+        <div class="container">
+  
+          <div class="section-title">
+            <h2>Portfolio</h2>
+            <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+          </div>
+  
+          <div class="row" data-aos="fade-up">
+            <div class="col-lg-12 d-flex justify-content-center">
+              <ul id="portfolio-flters">
+                <li data-filter="*" class="filter-active">All</li>
+                <li data-filter=".filter-nodejsreact">Nodejs & React</li>
+                <li data-filter=".filter-laravel">Laravel</li>
+                <li data-filter=".filter-laravelvue">Vue & Laravel</li>
+                <li data-filter=".filter-react">React</li>
+                <li data-filter=".filter-javascript">Javascript</li>
+              </ul>
+            </div>
+          </div>
+  
+          <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-nodejsreact">
+              <div class="portfolio-wrap">
+                <img src="assets/img/chat-app.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/chat-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://mern-chat-app-52kc.onrender.com/" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
+              <div class="portfolio-wrap">
+                <img src="assets/img/ats-app.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/ats-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://atsjobtracker.netlify.app" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+              <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
+                <div class="portfolio-wrap">
+                  <img src="assets/img/weather-app.png" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="assets/img/weather-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                    <a target="_blank" href="https://weatherforecastui.netlify.app" title="view code"><i class="bx bx-link"></i></a>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
+                <div class="portfolio-wrap">
+                  <img src="assets/img/dashboard.png" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="assets/img/dashboard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                    <a target="_blank" href="https://intranet.royalexchangeinsurance.com/" title="view site"><i class="bx bx-link"></i></a>
+                  </div>
+                </div>
+              </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
+              <div class="portfolio-wrap">
+                <img src="assets/img/ecommerce.PNG" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/ecommerce.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 4"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://github.com/Manlikehenryy/thrift-sales" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-react">
+              <div class="portfolio-wrap">
+                <img src="assets/img/todoapp.PNG" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/todoapp.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 5"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://sched-todo.netlify.app/" title="view site"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+  
+          
+  
+            <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
+              <div class="portfolio-wrap">
+                <img src="assets/img/junkhub.PNG" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/junkhub.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 6"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://junkhub-app.netlify.app/" title="view site"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+  
+  
+        </div>
+      </section><!-- End Portfolio Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -310,95 +460,7 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Portfolio</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-laravel">Laravel</li>
-              <li data-filter=".filter-laravelvue">Vue & Laravel</li>
-              <li data-filter=".filter-react">React</li>
-              <li data-filter=".filter-javascript">Javascript</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-          <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
-            <div class="portfolio-wrap">
-              <img src="assets/img/ats-app.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/ats-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="https://atsjobtracker.netlify.app" title="view code"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-            <div class="col-lg-4 col-md-6 portfolio-item filter-laravelvue">
-              <div class="portfolio-wrap">
-                <img src="assets/img/weather-app.png" class="img-fluid" alt="">
-                <div class="portfolio-links">
-                  <a href="assets/img/weather-app.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a target="_blank" href="https://weatherforecastui.netlify.app" title="view code"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
-              <div class="portfolio-wrap">
-                <img src="assets/img/dashboard.png" class="img-fluid" alt="">
-                <div class="portfolio-links">
-                  <a href="assets/img/dashboard.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a target="_blank" href="https://intranet.royalexchangeinsurance.com/" title="view site"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-laravel">
-            <div class="portfolio-wrap">
-              <img src="assets/img/ecommerce.PNG" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/ecommerce.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 4"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="https://github.com/Manlikehenryy/thrift-sales" title="view code"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-react">
-            <div class="portfolio-wrap">
-              <img src="assets/img/todoapp.PNG" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/todoapp.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 5"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="https://sched-todo.netlify.app/" title="view site"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
-        
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-javascript">
-            <div class="portfolio-wrap">
-              <img src="assets/img/junkhub.PNG" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/junkhub.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 6"><i class="bx bx-plus"></i></a>
-                <a target="_blank" href="https://junkhub-app.netlify.app/" title="view site"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-    </section><!-- End Portfolio Section -->
+  
 
 
     <!-- ======= Facts Section ======= -->
