--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
+                <li data-filter=".filter-aspnetcore">ASP.Net Core</li>
                 <li data-filter=".filter-nodejsreact">Nodejs & React</li>
                 <li data-filter=".filter-laravel">Laravel</li>
                 <li data-filter=".filter-laravelvue">Vue & Laravel</li>
@@ -296,6 +297,16 @@
           </div>
   
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-aspnetcore">
+              <div class="portfolio-wrap">
+                <img src="assets/img/blog.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/blog.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ASP.Net Core Blog"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://dotnetblog.onrender.com/" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-nodejsreact">
               <div class="portfolio-wrap">
                 <img src="assets/img/chat-app.png" class="img-fluid" alt="">
