--- a/index.html
+++ b/index.html
@@ -295,8 +295,21 @@
               </ul>
             </div>
           </div>
+
+          
   
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-nodejsreact">
+              <div class="portfolio-wrap">
+                <img src="assets/img/ecomm.png" class="img-fluid" alt="">
+                <div class="portfolio-links">
+                  <a href="assets/img/ecomm.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MERN Ecommerce App"><i class="bx bx-plus"></i></a>
+                  <a target="_blank" href="https://ecommerce-mern-app-8ty2.onrender.com/" title="view code"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-aspnetcore">
               <div class="portfolio-wrap">
                 <img src="assets/img/blog.png" class="img-fluid" alt="">
