updated linkedin url

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-9">
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span></span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a target="_blank" href="https://www.linkedin.com/in/henry-mbamalu-9096131b0">https://www.linkedin.com/in/henry-mbamalu-9096131b0</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a target="_blank" href="https://www.linkedin.com/in/henrymbamalu">linkedin.com/in/henrymbamalu</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a target="_blank" href="https://devhenry-portfolio.netlify.app">https://devhenry-portfolio.netlify.app</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email Address:</strong> <span><a href="mailto:henrymbamalu1@gmail.com">henrymbamalu1@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Work Status:</strong> <span>Open to work</span></li>
